fix(style): bc-title overflow scroll showing

--- a/app/styles/components/bc-title.scss
+++ b/app/styles/components/bc-title.scss
@@ -33,8 +33,7 @@
 	section {
 		width: 100%;
 		height: auto;
-		padding: 20px 0 0;
-		overflow: auto;
+		padding: 20px 0 5px;
 
 		& > textarea {
 			width: 100%;
